--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: pc-remotemanager-windows-${{ matrix.target }}.exe
-        path: target/${{ matrix.target }}/release/pc-remotemanager-client.exe
+        name: websocket-test-windows-${{ matrix.target }}
+        path: target/${{ matrix.target }}/release/websocket-test.exe
